Fixed to show vertical scrollbar only when needed

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -214,7 +214,8 @@ input[type=file]
 
 @media (min-width: 768px)
   #topics-container
-    overflow-y: scroll
+    overflow-x: hidden
+    overflow-y: auto
     &.affix-top
       max-height: calc(100vh - 89px)
     &.affix
